--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 	    <artifactId>commons-cli</artifactId>
 	    <version>1.5.0</version>
 	</dependency>
+	<dependency>
+	  <groupId>com.opencsv</groupId>
+	  <artifactId>opencsv</artifactId>
+	  <version>5.7.1</version>
+	</dependency>
   </dependencies>
   
   <build>
