Updated Maven build in an attempt to fix CodeQL compilation.

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,17 @@
   
   <build>
   <plugins>
+
+    <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-compiler-plugin</artifactId>
+       <version>3.10.1</version>
+       <configuration>
+           <source>1.8</source>
+	   <target>1.8</target>
+       </configuration>
+    </plugin>
+
     <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
@@ -61,6 +72,7 @@
     <plugin>
         <groupId>org.cyclonedx</groupId>
         <artifactId>cyclonedx-maven-plugin</artifactId>
+        <version>3.7.1</version>
         <configuration>
             <projectType>library</projectType>
             <schemaVersion>1.4</schemaVersion>
